--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -1,4 +1,4 @@
-<p>signup</p>
+<h1>Sign up</h1>
 
 <button (click)="successfullySignup = true" *ngIf="!successfullySignup">Confirmation from Email and Code</button>
 
