--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,14 +1,14 @@
-<p>login</p>
+<h2>Login</h2>
 <div class="login">
   <form [formGroup]="loginForm" (ngSubmit)="onSubmitLogin(loginForm.value)">
     <p>
       <label>Email: </label>
-      <input type="email" formControlName="email">
+      <input type="email" class="form-control" formControlName="email">
     </p>
     <p>
       <label>Password: </label>
-      <input type="password" formControlName="password">
+      <input type="password" class="form-control" formControlName="password">
     </p>
-    <button type="submit">Login</button>
+    <button class="btn-login" type="submit">Login</button>
   </form>
 </div>
