--- a/src/assets/css/todomvc-common.css
+++ b/src/assets/css/todomvc-common.css
@@ -129,6 +129,74 @@ hr {
 	transition-duration: 500ms;
 }
 
+/* thanks GitHub :-) */
+.d-flex {
+  display: flex!important;
+  justify-content: flex-end;
+}
+.list-style-none {
+  list-style: none!important;
+}
+.text-bold {
+  font-weight: 600!important;
+}
+.main-nav {
+  margin-left: 0;
+}
+.main-nav li a {
+  padding: 2px 8px;
+  text-decoration: none;
+  color: #baadad;
+  display: block;
+}
+.form-control-lg {
+  border-radius: 5px;
+  font-size: 16px;
+  min-height: 46px;
+  padding: 10px;
+  width: 100%;
+}
+.form-control, .form-select {
+  background-color: #fff;
+  background-position: right 8px center;
+  background-repeat: no-repeat;
+  border: 1px solid #d1d5da;
+  border-radius: 3px;
+  box-shadow: inset 0 1px 2px rgba(27,31,35,.075);
+  color: #24292e;
+  font-size: 16px;
+  line-height: 20px;
+  min-height: 34px;
+  outline: none;
+  padding: 6px 8px;
+  vertical-align: middle;
+}
+.btn-signup, .btn-login {
+  -moz-appearance: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  -webkit-appearance: none;
+  -webkit-user-select: none;
+  appearance: none;
+  background-color: #1277eb;
+  border: 0;
+  border-radius: 3px;
+  color: #fff;
+  cursor: pointer;
+  display: inline-block;
+  font-size: 14px;
+  font-weight: 500;
+  padding: 16px 24px;
+  transition: .2s;
+  user-select: none;
+  vertical-align: middle;
+  white-space: nowrap;
+}
+.login label ,
+.confirmation label ,
+.signup label {
+  display: block;
+}
 @media (min-width: 899px) {
 	.learn-bar {
 		width: auto;
